# audio-recorder

./: LICENSE  example.py  pyproject.toml
src/audiorecorder/: audio_recorder.py
