[project]
name = "audiorecorder"
version = "0.1.0"
description = ""
authors = [{ name = "Warren Davies"}]
readme = "README.md"
homepage = "https://github.com/WarrenDavies/audio-recorder"
repository = "https://github.com/WarrenDavies/audio-recorder"
packages = [
    { include = "audiorecorder", from = "src" }
]
requires-python = ">=3.11,<3.13"

dependencies = [
    "sounddevice (>=0.5.5,<0.6.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
